--- a/style.css
+++ b/style.css
@@ -6,16 +6,32 @@ header{
     display:flex;
     justify-content: space-around;
     align-items: center;
-    background-image: url(assets/bg.jpg);
+    /* background-image: url(assets/bg.jpg);
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: center;
+    background-position: center; */
     z-index: 1;
-    
+}
+.video{
+  position: absolute;
+  right:0;
+  bottom:0;
+  z-index: -5;
+}
+@media(min-aspect-ratio:16/9){
+  .video{
+    width:100%;
+    height: auto;
+  }
+  @media(max-aspect-ratio:16/9){
+    .video{
+      width:auto;
+      height: 100%;
+    }
 }
 .overlay{
     width: 100%;
-    height: 100%;
+    height: 110%;
     background-color: black;
     opacity: 65%;
     position: absolute;
