--- a/style.css
+++ b/style.css
@@ -6,10 +6,10 @@ header{
     display:flex;
     justify-content: space-around;
     align-items: center;
-    /* background-image: url(assets/bg.jpg);
+    background-image: url(assets/bg.jpg);
     background-repeat: no-repeat;
     background-size:cover;
-    background-position: center; */
+    background-position: center;
     z-index: 1;
 }
 .video{
