--- a/style.css
+++ b/style.css
@@ -103,6 +103,11 @@ header{
     padding: 20px;
     border-radius: 10px;
   }
+  @media only screen and (max-width: 1100px) {
+    .menu-bar ul li a {
+      font-size: 10px; 
+    }
+  }
   .menu-bar ul li a:hover {
     color: rgb(37, 3, 205);
     background-color: rgb(156, 194, 33);
