--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 header{
     padding-top:8vh;
+    height: 80vh;
     padding-bottom: 8vh;
     background-color: rgb(26, 45, 69);
     position: relative;
@@ -17,18 +18,20 @@ header{
     width: 100%;
     height: 100%;
     background-color: black;
-    opacity: 65%;
+    opacity: 75%;
     position: absolute;
     z-index: -1;
 }
 .header1{
     position: absolute;
     left: 1vh;
+    top: 2vh;
     cursor: pointer;
 }
 .header2{
     position: absolute;
     right: 1vh;
+    top: 2vh;
 }
 .headline{
     font-size: 5vh;
@@ -37,6 +40,8 @@ header{
     text-align: center;
     color: White;
     font-family: Roboto Condensed,system-ui;
+    position: absolute;
+    top: 10%;
 }
 .cut{
     font-size: 35px;
@@ -149,14 +154,14 @@ header{
   }
   .parent-container {
     margin-top: 30px;
-    background-color:gray;
+    background-color:white;
     height: fit-content;
     width: 100%; 
     display: flex; 
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
   }
   .leftcontainer{
-    width:50%;
+    /* width:50%; */
     border-right: 100px;
     border-color: black;
     padding: 30px;
@@ -170,7 +175,8 @@ header{
   
   .subcontainer{
     background-color: black;
-    width: 50%;
+    /* width: 50%; */
+    height: 800px;
     margin: 10px 20px;
     animation: anm;
     animation-duration: 15s;
@@ -178,7 +184,7 @@ header{
     /* animation; */
     /* animation-play-state: paused; */
     
-    position: relative;
+    /* position: relative;  */
   }
   .imgg{
     float: left;
