--- a/css/style.css
+++ b/css/style.css
@@ -348,7 +348,7 @@ padding:0px;
 }
 
 .page-header {
-    background: linear-gradient(rgba(53, 53, 53, .7), rgba(53, 53, 53, .7)), url(../img/carousel-1.jpg) center center no-repeat;
+    background: linear-gradient(rgba(53, 53, 53, .7), rgba(53, 53, 53, .7)), url(/assets/bg.jpg) center center no-repeat;
     background-size: cover;
 }
 
@@ -534,7 +534,7 @@ padding:0px;
     transform: scale(1.1);
 }
 
-.team-item .team-social {
+.team-social {
     position: absolute;
     width: 38px;
     top: 50%;
